# colony-memory-hermes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  plugin.yaml  pyproject.toml
colony_memory_hermes/: __init__.py  _register.py  cli.py  lifecycle.py
colony_memory_hermes/skills/: SKILL.md
colony_memory_hermes/tools/: __init__.py  _common.py  backup.py  restore.py
docs/: HERMES_PLUGIN_AUTHORING.md
tests/: conftest.py  test_cli.py  test_common.py  test_init.py  test_lifecycle.py  test_tools.py
